# mobil_scan

./: .env.example  .gcloudignore  .gitignore  ACCEDIR_DES_DEL_MOBIL.md  ACLARIMENT_IMPORTANT.md  ADEU_DOCKER_FOREVER.md  AFEGIR_MODEL_YOLO.md  ALTERNATIVES_PROFESSIONALS.md  ANALISI_PROBLEMES_I_MILLORES.md  APLICACIO_FUNCIONANT.md  ARCHITECTURE.md  ARREGLAR_DOCKER_PRIMER.bat  BUILD_I_PUSH_LOCAL.bat  BUILD_I_PUSH_LOCAL_FIXED.bat  BUILD_NEW_WORKER.bat  BUILD_PAS_A_PAS.bat  BUILD_RAPID_DOCKER_DESKTOP.bat  CHECK_WORKER_STATUS.bat  CLEAN_ALL_DOCKER.bat  COMANDES_RAPIDES_WSL2.md  COM_HO_FAN_ELS_PROFESSIONALS.md  COM_OBRIR_TERMINAL_WSL2.md  CONFIGURAR_CI_CD_ARA.bat  CONFIGURAR_GEMINI_API.md  CONFIGURAR_GITHUB_CLOUD_BUILD.md  CONFIGURAR_GIT_I_GITHUB.md  CONFIGURAR_SECRETS_CORRECTAMENT.md  CONFIGURAR_SECRETS_GITHUB.md  COPY_THIS_YAML.md  CRITICAL_PATH_TEST_RESULTS.md  DEPLOYMENT_GUIDE.md  DEPLOY_DOCKER_HUB_ARA.bat  DEPLOY_FACIL.bat  DEPLOY_GOOGLE_CLOUD_RUN.md  DESCARREGAR_REDIS_DIRECTE.bat  DIAGNOSTICAR_I_ARREGLAR.bat  DOCKER_BUILD_FIX.md  DOCKER_CLOUD_BUILD_SETUP.md  DOCKER_RESOURCE_ERROR.md  EMERGENCY_CHECK.bat  (+169 more)
BACKUP_NETEJA/: ACCEDIR_DES_DEL_MOBIL.md  ACLARIMENT_IMPORTANT.md  ACTUALITZAR_APLICACIO.bat  AFEGIR_MODEL_YOLO.md  ALTERNATIVES_PROFESSIONALS.md  ANALISI_PROBLEMES_I_MILLORES.md  APLICACIO_FUNCIONANT.md  ARQUITECTURA_DUAL_IA.md  ARREGLAR_DOCKER_PRIMER.bat  BUILD_I_PUSH_LOCAL.bat  BUILD_I_PUSH_LOCAL_FIXED.bat  BUILD_LOCAL_AMB_IA_EN_PROGRES.md  BUILD_NEW_WORKER.bat  BUILD_PAS_A_PAS.bat  BUILD_PAS_A_PAS_AMB_IA.bat  BUILD_RAPID_DOCKER_DESKTOP.bat  CHECK_WORKER_STATUS.bat  CLEAN_ALL_DOCKER.bat  COMANDES_RAPIDES_WSL2.md  COM_ACCEDIR_APLICACIO.md  COM_HO_FAN_ELS_PROFESSIONALS.md  COM_OBRIR_TERMINAL_WSL2.md  CONFIGURAR_GITHUB_SECRETS.md  CONFIGURAR_SECRETS_CORRECTAMENT.md  CONFIGURAR_SECRETS_GITHUB.md  COPY_THIS_YAML.md  CRITICAL_PATH_TEST_RESULTS.md  DEPLOY_AMB_IA.bat  DEPLOY_DOCKER_HUB_ARA.bat  DEPLOY_FACIL.bat  DESPLEGAR_SERVEIS_ARA.bat  DIAGNOSTICAR_I_ARREGLAR.bat  DOCKER_BUILD_FIX.md  DOCKER_CLOUD_BUILD_SETUP.md  DOCKER_RESOURCE_ERROR.md  EMERGENCY_CHECK.bat  EXECUTAR_ARA_FINAL.bat  EXECUTAR_BUILD_GITHUB.md  EXECUTAR_DEPLOY_ARA.md  EXECUTAR_SENSE_MILLORES.bat  (+107 more)
backend/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  app.py  requirements.txt
shared/: database.py  init_db.sql  llm_client.py
worker/: Dockerfile  Dockerfile.alternative  Dockerfile.cpu  Dockerfile.minimal  Dockerfile.simple  Dockerfile.test  Dockerfile.ultra-minimal  processor.py  processor_dynamsoft.py  processor_llm.py  requirements-worker-dynamsoft.txt  requirements-worker-test.txt  requirements-worker.txt
worker/cpp_scanner/: CMakeLists.txt  README.md
worker/cpp_scanner/src/: barcode_test.cpp
(+11 files in other folders)
